--- a/package.json
+++ b/package.json
@@ -4,13 +4,18 @@
   "description": "",
   "main": "src/alignment/generate.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "alignment:generate": "node ./src/alignment/generate.js",
+    "alignment:publish": "node ./src/alignment/publish.js",
+    "alignment": "npm run alignment:generate && npm run alignment:publish"
   },
   "author": "Ben De Meester <ben.demeester@ugent.be> (http://ben.de-meester/org/#me)",
   "license": "MIT",
   "dependencies": {
     "csvtojson": "^2.0.10",
-    "graphy": "^3.2.2",
     "n3": "^1.5.0"
+  },
+  "devDependencies": {
+    "dateformat": "^4.4.1",
+    "graphy": "^4.3.3"
   }
 }
